# ZipLens

./: .gitignore  README.md  index.html  introduction.md  package-lock.json  package.json  test_7z_recovery.py
src/: i18n.ts  main.ts  styles.css  ui.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_zip.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  bin_test.rs  lib.rs  main.rs
