[package]
name = "ziplens"
version = "1.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ziplens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.7.1"
zip = { version = "2.2.0", default-features = false, features = ["deflate-zlib-ng", "time", "aes-crypto"] }
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
tar = "0.4.40"
zstd = { version = "0.13.0", features = ["zstdmt"] }
sevenz-rust = "0.6.0"
rayon = "1.8.1"
tokio = { version = "1.50.0", features = ["full"] }
walkdir = "2.5.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.5"
encoding_rs = "0.8"
